Fix Derby tests compile access to inherited store internals